# fdf

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyramide.fdf
includes/: fdf.h  mlx_color.h
libft/: ft_strsplit.c  get_next_line.c
libft/includes/: get_next_line.h
srcs/: button_jobs.c  check.c  draw_fdf.c  draw_line.c  draw_line_antialias.c  ft_hexatoi.c  input_check.c  line.c  linear_gradient.c  main.c  memmanagement.c  merge_sort.c  parse.c  parse2.c  parse3.c  print.c  rotate.c
